# yina-lint

./: .gitignore  .project-actions.json  README.md  pyproject.toml
config/: naming.toml
src/naming/: cli.py  config.py  linter.py  validators.py
src/yina/: cli.py  linter.py
src/yina/config/: yina.toml
