[project]
name = "naming"
version = "0.1.0"
description = "A Python linter focused on naming conventions with 5 strictness levels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
jina = "naming.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
]
